# mcp-voicevox-server

./: CLAUDE.md  README.md  pyproject.toml  server.py
